# expense-manager

./: .gitignore  CHANGELOG.md  README.md  agent-goal.md  deployment.md  docker-compose.yml  eval-up.sh
documentation/: beta-invite-whatsapp.txt  beta-invite.md  phase1-flow.puml  phase2-flow.puml  phase3-flow.puml  phase4-flow.puml
evals/: agent_client.py  assertions.py  run_evals.py  test_cases.json
expense-api/: requirements.txt
expense-api/app/: config.py  database.py  main.py  models.py  service.py  sheets_client.py
expense-mcp/: Dockerfile  server.py
langgraph-agent/: Dockerfile  agent-goal.md  requirements.txt  server.py
splitwise-mcp/: .dockerignore  Dockerfile  deployment.md  pyproject.toml
splitwise-mcp/src/splitwise_mcp_server/: __init__.py  __main__.py  client.py  server.py  token_store.py  user_context.py
splitwise-mcp/src/splitwise_mcp_server/templates/: success.html
telegram-bot/: README.md  bot.py  requirements.txt
